# InsureQ

./: .gitignore  README.md
insureq_backend/: pyproject.toml
insureq_backend/src/app/: main.py  main_old.py
insureq_backend/src/database/: database.py  model_performance.py  schemas.py
insureq_backend/src/routes/: model_routes.py
insureq_backend/src/services/: model_services.py
insureq_backend/src/services/ml_models/: __init__.py  base_model.py  model_runner.py  registry.py
insureq_backend/src/services/ml_models/classical/: logistic_regression.py  random_forest.py
insureq_backend/src/services/ml_models/quantum/: qsvm.py  vqc.py
insureq_backend/src/tests/: test_model_runner.py
insureq_frontend/: package-lock.json  package.json
insureq_frontend/src/: App.js  api.js
insureq_frontend/src/components/: ModelPerformance.js  ModelPerformance_old.js
